<resources>
    <string name="app_name">"  "</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="op">操作</string>
    <string name="model">模式</string>
    <string name="setting">我的</string>

    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">蓝牙已连接</string>
    <string name="disconnected">蓝牙断开请重试</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="login">登录</string>
    <string name="smsCode">验证码</string>
    <string name="password">密码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputSmsCode">请输入验证码</string>
    <string name="getSmsCode">获取验证码</string>
    <string name="account">账号</string>
    <string name="mach">配对</string>
    <string name="searchText">蓝牙已经打开，请在手机界面下点击\n搜索设备的按钮，搜索配对设备</string>
    <string name="searchMadicine">搜索设备</string>
    <string name="ble_not_supported">当前手机不支持蓝牙</string>
    <string name="mach_up">衣</string>
    <string name="mach_down">裤</string>

    <string name="registration_failed_without_permission">注册失败，无权限！</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="Confirm_password_cannot_be_empty">确认密码不能为空!</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Is_the_registered">正在注册……</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="network_anomalies">网络异常，请检查网络！</string>
    <string name="User_already_exists">用户已存在！</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="Registration_failed">注册失败</string>
    <string name="Login_failed">登录失败:</string>
    <string name="Is_landing">正在登录……</string>
    <string name="Is_sending_a_request">请求发送中....</string>
    <string name="send_successful">请求发送成功，等待对方确认</string>
    <string name="Request_add_buddy_failure">添加好友失败： </string>
</resources>
