<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_hight"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="@dimen/title_bar_textsize"
        style="@style/base_text"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:layout_marginTop="7dp"
        android:paddingRight="12dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="14dp"
            android:layout_marginBottom="12dp"
            style="@style/base_text" />
        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            style="@style/base_edittext"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:hint="@string/inputPhone"
            android:maxLength="11"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:layout_marginTop="7dp"
        android:paddingRight="12dp"
        android:layout_height="76dp">
        <TextView
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:text="@string/smsCode"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="22dp"
            style="@style/base_text" />
        <EditText
            android:id="@+id/editSms"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/base_edittext"
            android:layout_marginLeft="10dp"
            android:hint="@string/inputSmsCode"
            android:maxLength="6"
            android:layout_marginTop="22dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnSms"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/getSmsCode"
            android:textColor="@color/white"
            android:visibility="visible"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_sms"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/line"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        style="@style/base_btn"/>
</LinearLayout>